# memory_manager

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
include/: memchk.h
src/: CMakeLists.txt  memchk.cpp
